--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://enztron-temp-deployed-branch.netlify.app/components.css">
-    <title>Socioztron</title>
+    <title>SocialZone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
